crates/rstest-bdd-macros/tests/ui/datatable_duplicate.stderr
error: invalid step function signature: only one DataTable parameter is permitted
 --> tests/ui/datatable_duplicate.rs:6:60
  |
6 | fn step(#[datatable] first: Vec<Vec<String>>, #[datatable] second: Vec<Vec<String>>) {}
  |                                                            ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: use `#[given] fn name(ctx: &rstest_bdd::StepContext, ...)` and valid fixtures
